compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__guard_int_float_eq_vars.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 425
expression: "let x = 1 let y = 1.0 case x { _ if x == y -> 1 }"
---
----- SOURCE CODE
let x = 1 let y = 1.0 case x { _ if x == y -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:37
  │
1 │ let x = 1 let y = 1.0 case x { _ if x == y -> 1 }
  │                                     ^^^^^^

Expected type:

    Int

Found type:

    Float
